--- a/packages/web/.storybook/preview-head.html
+++ b/packages/web/.storybook/preview-head.html
@@ -3,4 +3,5 @@
 <!-- Pull in static files served from your Static director or the internet -->
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' />
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'/>
+<link href='https://cdn.jsdelivr.net/npm/react-toastify@6.0.8/dist/ReactToastify.css' rel='stylesheet'/>
 <title>Storybook2</title>
